add config module
