# src/plugin-config/dto/plugin-config-update.dto.ts
@@ -1,0 +1,11 @@
+import { ApiProperty } from "@nestjs/swagger";
+import { IsObject } from "class-validator";
+
+export class PluginConfigUpdateDto {
+	@ApiProperty({
+		type: "object",
+		additionalProperties: true,
+	})
+	@IsObject()
+	values: Record<string, any>;
+}
